generated/checkers/refine/KN-Null-Pointer-Dereference-a54a594d-0/build_logs/syntax-repair-refine-1-2/build_stderr_3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const T* findSpecificTypeInParents(const clang::Stmt*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:31:10: error: ‘Parents’ has incomplete type
   31 |     auto Parents = C.getASTContext().getParents(*Cur);
      |          ^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclTemplate.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ASTContext.h:69:7: note: forward declaration of ‘class clang::DynTypedNodeList’
   69 | class DynTypedNodeList;
      |       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:32: error: no match for ‘operator[]’ (operand types are ‘clang::DynTypedNodeList’ and ‘int’)
   34 |     if (const Stmt *P = Parents[0].get<Stmt>()) {
      |                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:44: error: expected primary-expression before ‘>’ token
   34 |     if (const Stmt *P = Parents[0].get<Stmt>()) {
      |                                            ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:46: error: expected primary-expression before ‘)’ token
   34 |     if (const Stmt *P = Parents[0].get<Stmt>()) {
      |                                              ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isLoggingName(llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:397:22: warning: ‘bool llvm::StringRef::startswith(llvm::StringRef) const’ is deprecated: Use starts_with instead [-Wdeprecated-declarations]
  397 |          L.startswith("pr_") ||
      |          ~~~~~~~~~~~~^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:263:29: note: declared here
  263 |         "starts_with") bool startswith(StringRef Prefix) const {
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:399:22: warning: ‘bool llvm::StringRef::startswith(llvm::StringRef) const’ is deprecated: Use starts_with instead [-Wdeprecated-declarations]
  399 |          L.startswith("dev_") ||
      |          ~~~~~~~~~~~~^~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:263:29: note: declared here
  263 |         "starts_with") bool startswith(StringRef Prefix) const {
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In instantiation of ‘const T* findSpecificTypeInParents(const clang::Stmt*, clang::ento::CheckerContext&) [with T = clang::IfStmt]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:569:55:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:31:48: error: invalid use of incomplete type ‘class clang::DynTypedNodeList’
   31 |     auto Parents = C.getASTContext().getParents(*Cur);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclTemplate.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ASTContext.h:69:7: note: forward declaration of ‘class clang::DynTypedNodeList’
   69 | class DynTypedNodeList;
      |       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:31:10: error: ‘clang::DynTypedNodeList Parents’ has incomplete type
   31 |     auto Parents = C.getASTContext().getParents(*Cur);
      |          ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
